Added : Download Logic

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,9 +12,10 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+       
     }
 }
 
@@ -26,6 +27,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:customtabs:28.0.0'
 
+    implementation 'com.github.delight-im:Android-AdvancedWebView:v3.0.0'
 
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
